syntax = "proto3";

option go_package = "github.com/fairhurt/demo-grpc/invoicer";

message Amount {
    int64 amount = 1;
    string currency = 2;
}
message CreateResponse {
    bytes pdf = 1;
    bytes docx = 2;
    string invoiceNumber = 3;
}

message CreateRequest {
    Amount amount = 1;
    string from = 2;
    string to = 3;
    string VATNumber = 4;

} 

service Invoicer {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(CreateRequest) returns (CreateResponse) {}
}